# CUDA-quartic-solver

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  cuda-quartic-solver.sln  pyproject.toml  setup.py
quartic_solver/: CMakeLists.txt  cpu_solver.cpp  cpu_solver.h  gpu_solver.cu  gpu_solver.cuh  main.cu  quartic_solver.vcxproj  utils.cpp  utils.h
src/: cpu_main.cpp  cpu_main_py.cpp  cpu_solver.cpp  cpu_solver.h  gpu_solver.cu  gpu_solver.cuh  main.cu  main_py.cu  utils.cpp  utils.h
tests/: pythontests.py  tests.py  testsCPU.cpp
